# agora

./: .dockerignore  .gitignore  .vercelignore  LICENSE  README.md  phase2_demo_hosted_default_check.json  pyproject.toml  resume.tex  sitecustomize.py
.claude/: progress-update-phase1.md  toasty-wishing-gem.md
.codex/: AGENTS.md  Progress-update-phase2-implementation.md  Progress-update-phase2.md  Review-phase2-hardening-explore.md  Week2-frontend-acceptance.md  agora-ai-9900-migration-plan.md  api-auth-implementation-status-2026-04-15.md  phase2-sdk-smoke-progress-2026-04-20.md  phase2-streaming-telemetry-e2e-2026-04-18.md  week2_acceptance_api_trace.json
.github/agents/: Plan 📃.agent.md
.github/workflows/: ci.yml  deploy-sdk.yml  deploy.yml  publish-sdk.yml
.rwx/: ci.yml
agora/: __init__.py  agent.py  config.py  telemetry.py  types.py  version.py
agora-web/: README.md  UI_UX_CONCERNS.md  add-posthog.cjs  button-snippets.txt  convert-to-button.cjs  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
agora-web/scripts/: precompute-merkle.ts  test-canvas-timeline.ts  test-payment-release.ts  test-task-attachments.ts
agora-web/src/: App.tsx  index.css  main.tsx
agora-web/src/components/: CitationPill.tsx  ConfirmActionModal.tsx  ConvergenceMeter.tsx  EnsemblePlan.tsx  FloatingElements.tsx  Flyout.tsx  HashDisplay.tsx  InteractiveCard.tsx  MerkleTree.tsx  NavBar.tsx  ProviderGlyph.tsx  ReasoningPresetControls.tsx  SystemFlowMock.tsx  TierModelSelectorGrid.tsx  TypewriterText.tsx
agora-web/src/docs/: navigation.ts
agora-web/src/hooks/: ThemeProvider.tsx  themeContext.ts  useTheme.tsx
agora-web/src/layouts/: DashboardLayout.tsx  DocsLayout.tsx
agora-web/src/lib/: AuthProvider.tsx  AuthQueryBoundary.tsx  api.generated.ts  api.ts  apiKeyQueries.ts  auth.tsx  authContext.ts  benchmarkByok.test.ts  (+36 more)
agora/engines/: __init__.py  debate.py  delphi.py  moa.py  vote.py
agora/runtime/: costing.py  custom_agents.py  hasher.py  local_models.py  model_catalog.py  model_policy.py  monitor.py  orchestrator.py  prompt_policy.py  provider_errors.py  task_execution.py
agora/sdk/: __init__.py  arbitrator.py  config.py
agora/selector/: __init__.py  bandit.py  features.py  heuristic.py  reasoning.py  selector.py
agora/solana/: __init__.py  client.py
agora/tools/: __init__.py  brave.py  broker.py  openrouter_multimodal.py  runtime.py  sandbox_runner.py  source_resolver.py  types.py
api/: Dockerfile  __init__.py  auth.py  auth_keys.py  background_recovery.py  cloudbuild.yaml  config.py  constraints.txt  coordination.py  docker-compose.yml  live_journal.py  local_execution.py  main.py  models.py  requirements.txt  security.py  solana_bridge.py  source_storage.py  store.py  store_errors.py  store_local.py  streaming.py  telemetry.py
api/routes/: api_keys.py  auth_session.py  benchmarks.py  health.py  sources.py  tasks.py  webhooks.py
benchmarks/: __init__.py  runner.py
benchmarks/datasets/: code.json  code_tasks.json  creative.json  creative_tasks.json  demo_tasks.json  factual.json  factual_tasks.json  math.json  math_tasks.json  reasoning.json  reasoning_tasks.json
benchmarks/results/: phase2_demo.json  phase2_demo_hosted_2026-04-17.json  phase2_demo_hosted_2026-04-18.json  phase2_demo_local_2026-04-17.json  phase2_demo_local_2026-04-18.json  phase2_validation.json  phase2_validation_live_small_2026-04-20.json
contract/: .gitignore  Anchor.toml  package-lock.json  package.json  tsconfig.json
contract/migrations/: deploy.ts
contract/programs/agora/: Cargo.toml
contract/programs/agora/src/: errors.rs  lib.rs  state.rs
contract/programs/agora/src/instructions/: initialize_task.rs  mod.rs  record_selection.rs  record_switch.rs  release_payment.rs  submit_receipt.rs
contract/tests/: agora.ts
docs/: 2026-04-11-agora-master-plan-design.md  Architecture Map.md  Joshua Briefing.md  PROJECT_MEMORY.md  PROJECT_UPDATES.md  Phase Status.md  agora-ai-1199-restore-runbook.md  phase2-e2e-validation-2026-04-17.md  project-migration-2026-04-18.md  release-operations.md  remaining-codebase-issues.md  remaining-technical-issues-report.md  security-ops-checklist.md
docs/migration/: agora-ai-9900-architecture-plan.md
sandbox_runner_service/: Dockerfile  __init__.py  app.py  requirements.txt  runtime-image.Dockerfile  runtime-image.cloudbuild.yaml  runtime-requirements.txt
sandbox_test_data/: provider_bundle_eval.csv  provider_bundle_prompt.md
scripts/: generate_frontend_api_types.py  phase2_demo.py  phase2_validation.py  pipeline_demo.py  restore_agora_project.sh  run_paid_provider_tests.sh  run_rwx_restore_validation.sh  week1_demo.sh  week1_teleprompt_1min.txt  with_wsl_node.sh
scripts/agent_harness/: build_graphify_snapshot.py
scripts/phase2_sdk_smoke/: README.md  run.sh  run_phase2_sdk_smoke.py
sdk/: MANIFEST.in  README.md  agora  build_backend.py  pyproject.toml
sdk/agora/: agent.py
sdk/agora/engines/: debate.py  moa.py  vote.py
sdk/agora/runtime/: __init__.py  custom_agents.py  monitor.py  orchestrator.py
sdk/agora/sdk/: arbitrator.py
sdk/agora/selector/: bandit.py
sdk/agora/solana/: __init__.py  client.py
tests/: __init__.py  helpers.py  test_agent.py  test_api_config.py  test_api_infra_routes.py  test_auth_keys.py  test_auth_session_bootstrap.py  test_bandit.py  test_brave_tools.py  test_config.py  test_coordination.py  test_costing.py  test_debate.py  test_delphi.py  test_e2e.py  test_hasher.py  test_live_journal.py  test_localnet_receipt_validation.py  test_monitor.py  test_observability.py  test_openrouter_multimodal.py  test_orchestrator.py  test_phase2_demo_script.py  test_phase2_features.py  test_phase2_sdk_smoke_script.py  test_phase2_validation_script.py  test_prompt_policy.py  test_public_contract.py  test_restore_scripts.py  test_runtime_reliability.py  test_sandbox_runner_service.py  test_sdk_observability.py  test_sdk_packaging_layout.py  test_selector.py  test_solana_bridge.py  test_solana_client.py  test_source_routes.py  test_store_semantics.py  test_tool_runtime.py  test_vote.py
(+84 files in other folders)
