[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-protocol"
version = "0.1.0"
description = "On-chain debate-or-vote arbitration for multi-agent LLM systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.3.0",
    "google-genai>=1.33.0",
    "anthropic>=0.40",
    "openai>=1.52.0",
    "pydantic>=2.0",
    "structlog>=24.0",
    "numpy>=1.26",
    "merkletools>=1.0.3; python_version < '3.11'",
    "httpx>=0.27",
    "solders==0.26.0",
    "solana==0.36.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "build>=1.2",
    "ruff>=0.8",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic-settings>=2.0",
    "sse-starlette>=2.0",
    "google-cloud-storage>=2.18",
    "google-cloud-secret-manager>=2.20",
    "PyJWT>=2.9",
    "redis>=5.2",
    "solders==0.26.0",
    "solana==0.36.6",
]

[tool.setuptools.packages.find]
include = ["agora*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-p no:pytest_anchorpy"
markers = [
    "paid_integration: requires live paid-provider credentials and explicit opt-in",
    "localnet_integration: requires a local Solana validator and compiled Anchor artifacts",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
