[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-sdk"
version = "0.1.0a1"
description = "On-chain multi-agent arbitration primitive. Debate or vote, the AI decides."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.3.0"]

[project.urls]
Homepage = "https://github.com/zahemen9900/agora"

[tool.setuptools]
package-dir = {"" = ".."}

[tool.setuptools.packages.find]
where = [".."]
include = ["agora*"]
