[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "agora-arbitrator-sdk"
version = "0.1.0a5"
description = "On-chain multi-agent arbitration primitive. Debate or vote, the AI decides."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.3.0",
    "google-genai>=1.33.0",
    "anthropic>=0.40",
    "openai>=1.52.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "structlog>=24.0",
    "numpy>=1.26",
    "merkletools>=1.0.3; python_version < '3.11'",
    "solders==0.26.0",
    "solana==0.36.6",
]

[project.urls]
Homepage = "https://github.com/zahemen9900/agora"
